--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Gothic A1", sans-serif;
+    font-family: "Roboto", sans-serif;
+    font-weight: 200;
 }
 
 body{
@@ -10,6 +11,7 @@ body{
     background: url('background.jpg') no-repeat;
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
 }
 
 .header{
@@ -23,13 +25,14 @@ body{
     justify-content: space-between;
     align-items: center;
     z-index: 100;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
 .logo{
     font-size: 20px;
     color: #e20000;
     text-decoration: none;
-    font-weight: 400;
+    font-weight: 300;
 }
 
 .navbar{
@@ -38,6 +41,7 @@ body{
 
 .navbar a {
     font-size: 16px;
+    font-weight: 300;
     color: black;
     text-decoration: none;
     margin-left: 10px;
@@ -47,3 +51,99 @@ body{
 .navbar a:hover{
     color: dimgrey;
 }
+
+div.title{
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    margin: 2.5em;
+    margin-left: 5em;
+    margin-right: 5em;
+    font-size: 72px;
+    font-weight: 300;
+    color: #e20000;
+    /*background-color:white;*/
+    height: 346px;
+    
+}
+
+.bigtitle{
+    font-family: "Yuji Syuku", serif;
+    writing-mode: vertical-rl;
+    text-orientation: upright;
+    text-align: center;
+    line-height: 100px;
+    margin-right: 30px;
+}
+
+.background{
+    margin: 10em;
+    background-color:white;
+    padding: 13em;
+    padding-top: 5em;
+    padding-bottom: 5em;
+}
+
+/*
+.container{
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+}
+*/
+
+p{
+    font-size: large;
+    padding-bottom: 1em;
+}
+
+p.subtitle{
+    font-weight: 300;
+    color: #e20000;
+    padding-bottom: 0;
+}
+
+p.greysubtitle{
+    font-weight: 300;
+    color: #3f3f3f;
+}
+
+.text {
+    flex: 1;
+    /*padding: 200px;*/
+    text-align: justify;
+    text-justify: inter-word;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+figcaption{
+    font-style: italic;
+    color: #282828;
+}
+
+.default_button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 100px;
+    padding-top: 2em
+}
+
+.default{
+    width: 10em;
+    height: 6ex;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 10px;
+    font-weight: 300;
+    color: black;
+    cursor: pointer;
+}
+
+.default:hover {
+    background-color: rgb(234, 234, 234);
+  }
