--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ div.title{
     display: flex;
     justify-content: center;
     align-items: center; 
-    margin: 2.5em;
+    margin: 3em;
     margin-left: 5em;
     margin-right: 5em;
     font-size: 72px;
@@ -82,6 +82,7 @@ div.title{
     padding: 13em;
     padding-top: 5em;
     padding-bottom: 5em;
+    border-radius: 1rem;
 }
 
 /*
@@ -123,6 +124,7 @@ img {
 figcaption{
     font-style: italic;
     color: #282828;
+    padding-bottom: 2rem;
 }
 
 .default_button{
@@ -147,3 +149,12 @@ figcaption{
 .default:hover {
     background-color: rgb(234, 234, 234);
   }
+
+
+footer{
+    background-color: white;
+    width: 100%;
+    height: 6.5rem;
+    text-align: center;
+    padding-top: 2rem;
+}
