--- a/style.css
+++ b/style.css
@@ -157,14 +157,20 @@ i{
 
 
 
-nav.seasons{
+.seasons a{
     display: flex;
     flex-direction: column;
     color: #e20000;
-    padding-bottom: 1.875em;
-    line-height: 3.125em;
+    margin: 3em 0;
     cursor: pointer;
+    text-decoration: none;
+    font-weight: 300;
 }
+
+.seasons a:hover{
+    color: #650000;
+}
+
 
 div.title{
     display: flex;
@@ -215,7 +221,7 @@ p.bigsubtitle{
 p.subtitle{
     font-weight: 300;
     color: #e20000;
-    padding-bottom: 0;
+    
 }
 
 p.greysubtitle{
@@ -253,6 +259,7 @@ figcaption{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 2em;
     font-family:'Times New Roman', Times, serif;
     font-style: italic;
     font-size: 1em;
@@ -269,8 +276,17 @@ figcaption{
     padding-top: 2em
 }
 
+.back_button{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 6.25em;
+    padding-top: 2em
+}
+
+
 .default{
-    width: 10em;
+    width: 12em;
     height: 3em;
     background-color: rgb(133, 133, 133);
     font-weight: 300;
@@ -318,6 +334,11 @@ Fade in overlay de cada una de las vistas
 
 .textviews {
     text-align: center; /* Centra el texto */
+    display:flex ;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
 }
 
 /*
@@ -331,19 +352,65 @@ TERMINO Fade in overlay
     text-orientation: upright;
     color: #e20000;
     font-size: 3.125em;
-    margin: 30px;
-    margin-bottom: 0;
-
+    display: block;
+    height: 45%;
+    line-height: 1.5em;
+    
 }
 
 .italicsubtitle {
+    font-family:'Times New Roman', Times, serif;
     font-style: italic;
+    font-size: 1em;
+    color: #2b2b2b;
 }
 
 footer{
     background-color: white;
     width: 100%;
-    height: 6.5rem;
+    height: 6rem;
     text-align: center;
-    padding-top: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-content a{
+    position: relative;
+    cursor: pointer;
+    text-decoration: none;
+    font-weight: 300;
+    color: #000000;
+}
+
+.footer-content a::before{
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background: dimgrey;
+}
+
+.footer-content a:hover{
+    color: dimgrey;
+}
+
+
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 10px;
+}
+
+.gallery img {
+    width: 100%;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s;
+}
+
+.gallery img:hover {
+    transform: scale(1.05);
 }
